--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ input:focus{
     animation: fade-slide-in 0.3s ease-out forwards;
   }
   
-  .modal .modal__title {
+  .modal .modal_title {
     margin: 0;
     padding: 1rem;
     border-bottom: 1px solid #00329e;
@@ -125,11 +125,11 @@ input:focus{
     border-radius: 10px 10px 0 0;
   }
   
-  .modal .modal__content {
+  .modal .modal_content {
     padding: 1rem;
   }
   
-  .modal .modal__actions {
+  .modal .modal_action {
     padding: 1rem;
     display: flex;
     justify-content: flex-end;
@@ -161,19 +161,19 @@ input:focus{
     border-radius: 15px;
   }
   
-  .movie-element__image {
+  .movie-element_image {
     flex: 1;
     border-radius: 10px 0 0 10px;
     overflow: hidden;
   }
   
-  .movie-element__image img {
+  .movie-element_image img {
     height: 100%;
     width: 100%;
     object-fit: cover;
   }
   
-  .movie-element__info {
+  .movie-element_info {
     flex: 2;
     padding: 1rem;
   }
@@ -221,7 +221,7 @@ input:focus{
     pointer-events: all;
   }
   
-  #add-modal .modal__content {
+  #add-modal .modal_content {
     display: flex;
     flex-direction: column;
   }
